--- a/style.css
+++ b/style.css
@@ -62,29 +62,30 @@ li:hover {
 }
 
 .content {
-    width: 50%;
+    width: 60%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 20px 15%;
 }
 
 .trailer {
-    width: 50%;
+    width: 70%;
 }
 
 #sinopse {
-    width: 50%;
+    width: 25%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 30px;
+    margin-left: 40px;
 }
 
 .description {
     color: #fff;
     font-size: 19px;
     font-family: 'Kdam Thmor Pro', sans-serif;
-    width: 70%;
+    width: 150%;
 }
 
 .button {
@@ -99,6 +100,7 @@ li:hover {
     font-size: 18px;
     display: flex;
     justify-content: center;
+    align-items: center;
     font-weight: bold;
     border: none;
     outline: none;
@@ -107,5 +109,38 @@ li:hover {
 
 .button:hover {
     background-color: #fff;
-    columns: #000;
+    color: #000;
 }
+
+.actors-cards-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.cards-content {
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 20px;
+    column-gap: 40px;
+}
+
+.card {
+    width: 100%;
+    height: 600px;
+    background-size: cover;
+    background-position: 50% 50%;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 1s;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 0 0 20px 10px;
+    color: #fff;
+    font-size: 17px;
+   font-family: 'Kdam Thmor Pro', sans-serif; 
+}
+
