--- a/style.css
+++ b/style.css
@@ -144,3 +144,14 @@ li:hover {
    font-family: 'Kdam Thmor Pro', sans-serif; 
 }
 
+.banner-1 {
+    background-image: url('https://img.ibxk.com.br/2020/09/03/03172854459200.png?ims=704x');
+}
+
+.banner-2 {
+    background-image: url('https://t.ctcdn.com.br/MyTgGTeJexTMpknqF5fss4aIEIo=/101x0:1362x710/720x405/smart/filters:format(webp)/i487901.png');
+}
+
+.banner-3 {
+    background-image: url('https://cdn.mos.cms.futurecdn.net/4Z6yxVu5LGNyQ7bfstbsg8.png');
+}
