--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ li:hover {
     height: 600px;
 }
 
-#trailer-conteiner {
+#trailer-container {
     width: 100%;
     height: 400px;
     display: flex;
@@ -70,22 +70,22 @@ li:hover {
 }
 
 .trailer {
-    width: 70%;
+    width: 50%;
 }
 
 #sinopse {
-    width: 25%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 40px;
+    margin-left: 30px;
 }
 
 .description {
     color: #fff;
     font-size: 19px;
     font-family: 'Kdam Thmor Pro', sans-serif;
-    width: 150%;
+    width: 70%;
 }
 
 .button {
@@ -112,7 +112,7 @@ li:hover {
     color: #000;
 }
 
-.actors-cards-container {
+.actor-cards-container {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -141,7 +141,11 @@ li:hover {
     padding: 0 0 20px 10px;
     color: #fff;
     font-size: 17px;
-   font-family: 'Kdam Thmor Pro', sans-serif; 
+    font-family: 'Kdam Thmor Pro', sans-serif; 
+}
+
+.card:hover {
+    transform: scale(1.02);
 }
 
 .banner-1 {
@@ -149,7 +153,7 @@ li:hover {
 }
 
 .banner-2 {
-    background-image: url('https://t.ctcdn.com.br/MyTgGTeJexTMpknqF5fss4aIEIo=/101x0:1362x710/720x405/smart/filters:format(webp)/i487901.png');
+    background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fjovemnerd.com.br%2Fnerdbunker%2Fthe-batman-halle-berry-elogia-zoe-kravitz-como-a-nova-mulher-gato%2F&psig=AOvVaw03kd2xRYr-7G4q2B5VfU9n&ust=1683910544102000&source=images&cd=vfe&ved=0CA4QjRxqFwoTCJCq0u_d7f4CFQAAAAAdAAAAABAD');
 }
 
 .banner-3 {
