--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ li:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 20px 15%;
+    margin: 100px 50%;
 }
 
 .trailer {
@@ -153,7 +153,7 @@ li:hover {
 }
 
 .banner-2 {
-    background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fjovemnerd.com.br%2Fnerdbunker%2Fthe-batman-halle-berry-elogia-zoe-kravitz-como-a-nova-mulher-gato%2F&psig=AOvVaw03kd2xRYr-7G4q2B5VfU9n&ust=1683910544102000&source=images&cd=vfe&ved=0CA4QjRxqFwoTCJCq0u_d7f4CFQAAAAAdAAAAABAD');
+    background-image: url('https://s2.glbimg.com/lJEJ_rnqoTSiKQ542pPpVphEgOM=/e.glbimg.com/og/ed/f/original/2021/12/31/zoe_kravitz_catwoman.jpeg');
 }
 
 .banner-3 {
