--- a/style.css
+++ b/style.css
@@ -206,27 +206,29 @@ li:hover {
     }
 
     .trailer {
-        width: 100%;
+        width: 115%;
     }
 
     #sinopse {
-        width: 95%;
+        width: 135%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
 
     .description {
-        width: 100%;
+        width: 75%;
+        margin-left: 15px;
     }
 
     .button {
-        width: 100%;
+        width: 80%;
         margin-top: 30px;
     }
 
     .cards-content {
         grid-template-columns: 1fr;
-        margin-top: 150px;
+        margin-top: 250px;
+        margin-left: 20px;
     }
 }
