--- a/contato.css
+++ b/contato.css
@@ -1,57 +1,29 @@
-﻿{
-    margin: 0;
-    padding: 0;
-    background-color: black;
-    list-style: none;
-    text-decoration: none;
+﻿body {
+    font-family: Arial, sans-serif;
+    background-color: lightblue;
+  }
 
-}
+  form {
+    width: 500px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: white;
+  }
 
-header {
-    height: 90px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  label {
+    display: block;
+    margin-bottom: 10px;
+  }
 
-}
-
-nav {
-    width: 60%;
-}
-
-ul {
-    display: flex;
+  input, textarea {
     width: 100%;
-    justify-content: space-between;
-}
+    margin-bottom: 20px;
+  }
 
-li {
-    list-style: none;
-    color: aliceblue;
-    cursor: pointer;
-    font-size: 19px;
-    transition: .5s;
-    font-family: 'Kdam Thmor Pro', sans-serif;
-    
-}
-
-li:hover {
-    color: #D21617;
-}
-
-#logo {
-    width: 150px;
-    height: auto;
-}
-
-#email {
-    display: block;
-}
-
-#number {
-    display: block;
-}
-
-#mensagem {
-    display: block;
-}
+  input[type=submit] {
+    width: auto;
+    background-color: green;
+    color: white;
+    font-weight: bold;
+  }
