--- a/contato.css
+++ b/contato.css
@@ -1,4 +1,4 @@
-﻿body {
+﻿/*body {
     font-family: Arial, sans-serif;
     background-color: lightblue;
   }
@@ -26,4 +26,4 @@
     background-color: green;
     color: white;
     font-weight: bold;
-  }
+  }*/
