--- a/style.css
+++ b/style.css
@@ -56,9 +56,10 @@ li:hover {
 
 #trailer-container {
     width: 100%;
-    height: 400px;
+    height: 500px;
     display: flex;
     justify-content: left;
+
 }
 
 .content {
@@ -66,11 +67,12 @@ li:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 5px 10%;
+    margin: 20px 10%;
 }
 
 .trailer {
     width: 85%;
+    margin-left: -20px;
 }
 
 #sinopse {
@@ -86,6 +88,7 @@ li:hover {
     font-size: 15px;
     font-family: 'Kdam Thmor Pro', sans-serif;
     width: 400%;
+    margin-left: 20px;
 }
 
 .button {
@@ -105,6 +108,7 @@ li:hover {
     border: none;
     outline: none;
     margin-top: 25px;
+    margin-left: 20px;
 }
 
 .button:hover {
