--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ li:hover {
 
 #trailer-container {
     width: 100%;
-    height: 500px;
+    height: 100%;
     display: flex;
     justify-content: left;
 
