--- a/comentarios.css
+++ b/comentarios.css
@@ -1,48 +1,31 @@
-
-
+main {
+  height: 20px;
+  margin-right: 400px;
+  margin-top: 100px;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
+  margin-left: 50px;
+}  
+  
 .comment {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 20px;
-    border-radius: 5px;
+  background-color: rgb(255, 255, 255);
+  width: 600px;
+  margin: 20px;
+  border-radius: 10px;
+  padding: 5px;
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+}
 
-  }
-  
-  .comment h3 {
-    margin-top: 0;
-  }
-  
-  .comment p {
-    margin-bottom: 0;
-  }
-  
-  .comment-form {
-    margin-top: 20px;
+.comment-form {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  margin: 20px;
+  border-radius: 10px;
+  padding: 5px;
+  font-size: 20px;
+  font-family: Arial, sans-serif;
+  align-items: baseline;
 
-  }
-  
-  .comment-form input,
-  .comment-form textarea {
-    width: 100%;
-    margin-bottom: 10px;
-    color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-
-  }
-  
-  .comment-form button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s;
-
-  }
-  
-  .comment-form button:hover {
-    background-color: #45a049;
-  }
-  
+}
